# Computer_Graphics

./: CMakeLists.txt
assets/coniferous_forest/: coniferous_forest.mtl
assets/granite_stone/: granite_stone.mtl
assets/realistic_trees/: realistic_trees.mtl
assets/terrain/: floor.mtl
include/: Camera.h  Mesh.h  Model.h
include/glad/: glad.h
src/: glad.c  main.cpp
